Fixed additional 'bugs' and text wrapping for paragraphs

--- a/public/styles/app.less
+++ b/public/styles/app.less
@@ -78,3 +78,10 @@ input:focus {
     outline:0 !important;
 }
 
+textarea {
+	white-space: pre-wrap !important;
+}
+
+p {
+	white-space: pre-wrap !important;
+}
